--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,8 +1,8 @@
 {
-  "manifest_version": 2,
-  "name": "Easy Clipboard",
+  "manifest_version": 3,
+  "name": "Clipboard Share",
   "version": "2.2.2",
-  "description": "Easy Clipboard allows you to quickly copy and paste text, urls and more, and store them safely in your browser for future use.",
+  "description": "Clipboard Share allows you to quickly copy and paste text, urls and more, share them to other device, and store them safely in your browser for future use.",
   "icons": {
     "128": "./static/icon128.png",
     "48": "./static/icon48.png",
